# Canyon-SQL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caasdfadsrgo.tomlsda  Cargo.toml  README.md  bash_aliases.sh  coverage.json  index.html
.github/: CODEOWNERS  changelog_configuration.json
.github/workflows/: cache.yml  code-coverage.yml  code-quality.yml  continuous-integration.yml  deploy.yml  greetings.yml  linux-tests.yml  macos-tests.yml  publish-tests-results.yml  publish.yaml  release.yml  rust-build.yml  test-build.yml  tests.yml  windows-tests.yml
.github/workflows/configs/: gcov-config.yml
canyon-book/: book.toml
canyon_connection/: Cargo.toml
canyon_connection/src/: canyon_database_connector.rs  canyon_database_connector.rs.html  connection.rs  credentials.rs  datasources.rs  datasources.rs.html  index.html  lib.rs  lib.rs.html  postgresql_connector.rs
canyon_crud/: Cargo.toml
canyon_crud/src/: bounds.rs  bounds.rs.html  crud.rs  crud.rs.html  index.html  lib.rs  lib.rs.html  mapper.rs  query.rs  result.rs  result.rs.html  rows.rs  rows.rs.html
canyon_crud/src/query_elements/: index.html  mod.rs  operators.rs  operators.rs.html  query.rs  query.rs.html  query_builder.rs  query_builder.rs.html
canyon_entities/: Cargo.toml
canyon_entities/src/: entity.rs  entity.rs.html  entity_fields.rs.html  field_annotation.rs.html  index.html  lib.rs  manager_builder.rs.html  register_types.rs  register_types.rs.html
canyon_examples/: Cargo.toml  README.md  secrets.toml  triforce_clean_start_no_data.sql
canyon_examples/src/: league.rs  leagues.rs  main.rs  main2.rs  main_old.rs  test.rs  test_foreign.rs  tournament.rs  tournaments.rs
canyon_examples/src/some_folder/: some_model.rs
canyon_macros/: Cargo.toml
canyon_macros/src/: canyon_entity_macro.rs  canyon_macro.rs  field_annotation.rs  lib.rs
canyon_macros/src/manager/: entity.rs  entity_fields.rs  field_annotation.rs  manager_builder.rs  mod.rs
canyon_macros/src/query_operations/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
canyon_macros/src/query_operations/utils/: helpers.rs  macro_tokens.rs  mod.rs
canyon_macros/src/utils/: function_parser.rs  helpers.rs  macro_tokens.rs  mod.rs
canyon_manager/: Cargo.toml
canyon_manager/src/: index.html  lib.rs.html
canyon_manager/src/manager/: entity.rs  entity.rs.html  entity_fields.rs  entity_fields.rs.html  field_annotation.rs  field_annotation.rs.html  index.html  manager_builder.rs  manager_builder.rs.html
canyon_migrations/: Cargo.toml
canyon_migrations/src/: constants.rs  index.html  lib.rs  lib.rs.html
canyon_migrations/src/manager/: mod.rs
canyon_migrations/src/migrations/: handler.rs  handler.rs.html  index.html  information_schema.rs  information_schema.rs.html  memory.rs  memory.rs.html  mod.rs  processor.rs  processor.rs.html  register_types.rs  transforms.rs  transforms.rs.html
canyon_observer/: Cargo.toml
canyon_observer/src/: constants.rs  credentials.rs  handler.rs  handler.rs.html  index.html  lib.rs  lib.rs.html  memory.rs  memory.rs.html
canyon_observer/src/manager/: entity.rs  entity.rs.html  entity_fields.rs.html  field_annotation.rs  field_annotation.rs.html  index.html  manager_builder.rs  manager_builder.rs.html
canyon_observer/src/migrations/: handler.rs  handler.rs.html  index.html  information_schema.rs  information_schema.rs.html  memory.rs  memory.rs.html  mod.rs  processor.rs  processor.rs.html  register_types.rs  register_types.rs.html
canyon_observer/src/postgresql/: index.html  information_schema.rs  information_schema.rs.html  migrations.rs  migrations.rs.html  mod.rs  register_types.rs  register_types.rs.html
canyon_sql/: Cargo.toml
canyon_sql/src/: connector.rs  crud.rs  handler.rs  index.html  lib.rs  lib.rs.html  results.rs  runtime_data.rs
docker/: docker-compose.yml
docker/mysql/: create_tables.sql  fill_tables.sql
docker/postgres-data/: postmaster.pid
docker/postgres-data/base/13757/: 1247  1249  1259  16384  16385  16389  16390  16392  16393  16397  16398  16405  16406  16406_fsm  16410  16411  16413  16414  16414_fsm  16418  16419  16426  16427  16430  2224  2606  2608  2610  2619  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+12 more)
docker/postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
docker/postgres-data/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
docker/postgres-data/pg_xact/: 0000
docker/sql/: 10-create_tables.sql  20-fill_tables.sql
docs/Less or equals than 0.2.0/: README.md
src/: crud.rs  index.html  lib.rs  lib.rs.html
tests/: Cargo.toml  canyon.toml  canyon_integration_tests.rs  canyon_integration_tests.rs.html  constants.rs  constants.rs.html  crud_operations.rs  crud_operations.rs.html  index.html
tests/crud/: delete_operations.rs  delete_operations.rs.html  foreign_key_operations.rs  foreign_key_operations.rs.html  index.html  init_mssql.rs  init_mssql.rs.html  insert_operations.rs  insert_operations.rs.html  mod.rs  mod.rs.html  querybuilder_operations.rs  querybuilder_operations.rs.html  select_operations.rs  select_operations.rs.html  update_operations.rs  update_operations.rs.html
tests/migrations/: index.html  mod.rs  mod.rs.html
tests/tests_models/: index.html  league.rs  league.rs.html  mod.rs  player.rs  player.rs.html  tournament.rs  tournament.rs.html
