[package]
name = "canyon_sql"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "canyon_connection",
    "canyon_crud",
    "canyon_observer",
    "canyon_macros",

    "tests"
]

[dependencies]
# Project crates
canyon_connection = { workspace = true, path = "canyon_connection" }
canyon_crud = { workspace = true, path = "canyon_crud" }
canyon_observer = { workspace = true, path = "canyon_observer" }
canyon_macros = { workspace = true, path = "canyon_macros" }

# To be marked as opt deps
tokio-postgres = { workspace = true, optional = true }
tiberius = { workspace = true, optional = true }

[workspace.dependencies]
canyon_crud = { version = "0.3.1", path = "canyon_crud" }
canyon_connection = { version = "0.3.1", path = "canyon_connection" }
canyon_observer = { version = "0.3.1", path = "canyon_observer" }
canyon_macros = { version = "0.3.1", path = "canyon_macros" }

tokio = { version = "1.27.0", features = ["full"]  }
tokio-util = { version = "0.7.4", features = ["compat"]  }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"] }
tiberius = { version = "0.12.1", features = ["tds73", "chrono", "integrated-auth-gssapi"] }

chrono = { version = "0.4", features = ["serde"] }  # Just from TP better?
serde = { version = "1.0.138", features = ["derive"] }

futures = "0.3.25"
indexmap = "1.9.1"
async-std = "1.12.0"
lazy_static = "1.4.0"
toml = "0.7.3"
async-trait = "0.1.68"
walkdir = "2.3.3"
regex = "1.5"

quote = "1.0.9"
proc-macro2 = "1.0.27"

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Alex Vergara<pyzyryab@tutanota.com>, Gonzalo Busto<gbm25@gmail.com>"]
documentation = "https://zerodaycode.github.io/canyon-book/"
homepage = "https://github.com/zerodaycode/Canyon-SQL"
readme = "README.md"
license = "MIT"
description = "A Rust ORM and QueryBuilder"

[features]
postgres = ["tokio-postgres", "canyon_connection/postgres", "canyon_crud/postgres", "canyon_observer/postgres", "canyon_macros/postgres"]
mssql = ["tiberius", "canyon_connection/mssql", "canyon_crud/mssql", "canyon_observer/mssql", "canyon_macros/mssql"]
