[package]
name = "canyon_connection"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }

tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"], optional = true }
tiberius = { version = "0.12.1", features = ["tds73", "chrono", "integrated-auth-gssapi"], optional = true }

futures = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-std = { workspace = true, optional = true }

[features]
default = ["postgres"]
postgres = ["tokio-postgres"]
mssql = ["tiberius", "async-std"]
