[package]
name = "canyon_connection"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }

tokio-postgres = { workspace = true, optional = true }
tiberius = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }

futures = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
async-std = { workspace = true, optional = true }
walkdir = { workspace = true }


[features]
postgres = ["tokio-postgres"]
mssql = ["tiberius", "async-std"]
mysql = ["mysql_async"]

