[package]
name = "canyon_crud"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
tokio-postgres = { workspace = true, optional = true }
tiberius = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
mysql_common = { workspace = true, optional = true }


chrono = { workspace = true }
async-trait = { workspace = true }

canyon_connection = { workspace = true }

[features]
postgres = ["tokio-postgres", "canyon_connection/postgres"]
mssql = ["tiberius", "canyon_connection/mssql"]
mysql = ["mysql_async","mysql_common", "canyon_connection/mysql"]
