[package]
name = "canyon_entities"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
regex = { workspace = true }
partialdebug = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { version = "1.0.86", features = ["full", "parsing"] } # TODO Pending to refactor and upgrade
