[package]
name = "canyon_macros"
version = "0.2.0"
edition = "2021"
documentation = "https://zerodaycode.github.io/canyon-book/"
homepage = "https://github.com/zerodaycode/Canyon-SQL"
readme = "../README.md"
license = "MIT"
description = "A Rust ORM and QueryBuilder"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
futures = "0.3.21"
tokio = { version = "1.9.0", features = ["full"] }

canyon_observer = { version = "0.2.0", path = "../canyon_observer" }
canyon_crud = { version = "0.2.0", path = "../canyon_crud" }
canyon_connection = { version = "0.2.0", path = "../canyon_connection" }
