[package]
name = "canyon_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
futures = "0.3.21"
tokio = { version = "1.9.0", features = ["full"] }

canyon_observer = { workspace = true, path = "../canyon_observer" }
canyon_crud = { workspace = true, path = "../canyon_crud" }
canyon_connection = { workspace = true, path = "../canyon_connection" }

[features]
default = ["postgres"]
postgres = ["canyon_connection/postgres", "canyon_crud/postgres", "canyon_observer/postgres"]
mssql = ["canyon_connection/mssql", "canyon_crud/mssql", "canyon_observer/mssql"]
