[package]
name = "canyon_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["full"] } # TODO Pending to upgrade and refactor
quote = { workspace = true }
proc-macro2 = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

canyon_connection = { workspace = true }
canyon_crud = { workspace = true }
canyon_entities = { workspace = true }
canyon_migrations = { workspace = true, optional = true }

[features]
postgres = ["canyon_connection/postgres", "canyon_crud/postgres", "canyon_migrations/postgres"]
mssql = ["canyon_connection/mssql", "canyon_crud/mssql", "canyon_migrations/mssql"]
mysql = ["canyon_connection/mysql", "canyon_crud/mysql", "canyon_migrations/mysql"]

migrations = ["canyon_migrations"]
