[package]
name = "canyon_migrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
canyon_crud = { workspace = true }
canyon_connection = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
tiberius = { workspace = true, optional = true }
async-trait = { workspace = true }

regex = { workspace = true }
walkdir = { workspace = true }
partialdebug = "0.2.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "1.0.86", features = ["full", "parsing"] } # TODO Pending to refactor and upgrade

[features]
postgres = ["tokio-postgres", "canyon_connection/postgres", "canyon_crud/postgres"]
mssql = ["tiberius", "canyon_connection/mssql", "canyon_crud/mssql"]
