[package]
name = "canyon_observer"
version = "0.1.0"
edition = "2021"
documentation = "https://zerodaycode.github.io/canyon-book/"
homepage = "https://github.com/zerodaycode/Canyon-SQL"
readme = "../README.md"
license = "../LICENSE"
license-file = "LICENSE"
Description = "A Rust ORM and QueryBuilder"

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
tokio-postgres = { version = "0.7.2" , features=["with-chrono-0_4"] }
async-trait = { version = "0.1.50" }
regex = "1.5"
walkdir = "2"

proc-macro2 = "1.0.27"
syn = { version = "1.0.86", features = ["full", "parsing"] }
quote = "1.0.9"

# Debug
partialdebug = "0.2.0"

# Internal dependencies
canyon_crud = { version = "0.1.0", path = "../canyon_crud" }
canyon_connection = { version = "0.1.0", path = "../canyon_connection" }