[package]
name = "canyon_observer"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
canyon_crud = { workspace = true }
canyon_connection = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
tiberius = { workspace = true, optional = true }
async-trait = { workspace = true }

# transform to opts with migrations feature
regex = "1.5" # opt
walkdir = "2" # opt
proc-macro2 = "1.0.27"
syn = { version = "1.0.86", features = ["full", "parsing"] }
quote = "1.0.9"
partialdebug = "0.2.0"

[features]
postgres = ["tokio-postgres", "canyon_connection/postgres", "canyon_crud/postgres"]
mssql = ["tiberius", "canyon_connection/mssql", "canyon_crud/mssql"]
