[package]
name = "canyon_sql"
version = "1.0.0"
edition = "2021"
authors = ["Alex Vergara<pyzyryab@tutanota.com>, Gonzalo Busto<gbm25@gmail.com>"]

[dependencies]
async-trait = { version = "0.1.50" }

# Project crates
canyon_macros = { path = "../canyon_macros" }
canyon_observer = { path = "../canyon_observer" }
canyon_crud = { path = "../canyon_crud" }
canyon_connection = { path = "../canyon_connection" }
