[package]
name = "canyon_sql"
version = "0.0.1"
edition = "2021"
authors = ["Alex Vergara<pyzyryab@tutanota.com>, Gonzalo Busto<gbm25@gmail.com>"]

[dependencies]
async-trait = { version = "0.1.50" }

# Project crates
canyon_macros = { version = "0.0.1", path = "../canyon_macros" }
canyon_observer = { version = "0.0.1", path = "../canyon_observer" }
canyon_crud = { version = "0.0.1", path = "../canyon_crud" }
canyon_connection = { version = "0.0.1", path = "../canyon_connection" }
