[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
canyon_sql = { path = ".." }

[[test]]
name = "canyon_integration_tests"
path = "canyon_integration_tests.rs"

[features]
default = ["postgres"]
postgres = ["canyon_sql/postgres"]
mssql = []
