[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
canyon_sql = { path = "..", default-features = false, features = ["mssql"] }

[[test]]
name = "canyon_integration_tests"
path = "canyon_integration_tests.rs"

[features]
default = ["postgres"]
postgres = []
mssql = []
